--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<meta name="google-signin-client_id" content="156594093226-4hm9eim4a630vbv8vkmeoc0a3emqkgfi.apps.googleusercontent.com">
 	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Padauk:wght@400;700&display=swap" rel="stylesheet">
 	
 	<script defer src='/build/bundle.js'></script>
